# tauri-cc

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  README_EN.md
ext/deno_tauri/: Cargo.toml
ext/deno_tauri/src/: 019_tauri_channel.js  emit.rs  event.rs  in_memory_event_channel.rs  lib.rs  tauri_window.ts  window.rs  window_host.rs
ext/simple_http/: Cargo.toml  compressible.rs  lib.rs  reader_stream.rs  simplehttp.js
ext/simple_http/benches/: compressible.rs
fronted/: package.json  pnpm-lock.yaml
fronted/src/components/: Greet.vue
frontend/: package.json
frontend/src/layouts/: AppSider.vue
frontend/src/router/: subMenu.js
frontend/src/utils/: ipcRenderer.js
frontend/src/views/framework/socket/: HttpServer.vue  Ipc.vue  SocketServer.vue  index.ts
frontend/src/views/os/file/: Index.vue
micro_engine/: Cargo.toml  build.rs
micro_engine/src/: auth_tokens.rs  cdp.rs  emit.rs  errors.rs  factory.rs  file_fetcher.rs  graph_util.rs  http_util.rs  js.rs  lib.rs  module_loader.rs  node.rs  resolver.rs  version.rs  worker.rs
micro_engine/src/args/: flags.rs  flags_net.rs  import_map.rs  lockfile.rs  mod.rs  package_json.rs
micro_engine/src/cache/: cache_db.rs  caches.rs  check.rs  common.rs  deno_dir.rs  disk_cache.rs  emit.rs  incremental.rs  mod.rs  module_info.rs  node.rs  parsed_source.rs
micro_engine/src/lsp/: analysis.rs  cache.rs  capabilities.rs  client.rs  code_lens.rs  completions.rs  config.rs  diagnostics.rs  documents.rs  language_server.rs  logging.rs  lsp_custom.rs  mod.rs  npm.rs  parent_process_checker.rs  path_to_regex.rs  performance.rs  refactor.rs  registries.rs  repl.rs  semantic_tokens.rs  text.rs  tsc.rs  urls.rs
micro_engine/src/lsp/testing/: collectors.rs  definitions.rs  execution.rs  server.rs
micro_engine/src/napi/: async.rs  env.rs  js_native_api.rs  threadsafe_functions.rs  util.rs
micro_engine/src/npm/: byonm.rs  cache_dir.rs  common.rs  mod.rs
micro_engine/src/npm/managed/: cache.rs  installer.rs  mod.rs  registry.rs  resolution.rs  tarball.rs
micro_engine/src/npm/managed/resolvers/: common.rs  global.rs  local.rs  mod.rs
micro_engine/src/ops/: bench.rs  jupyter.rs  testing.rs
micro_engine/src/standalone/: binary.rs  file_system.rs  mod.rs  virtual_fs.rs
micro_engine/src/tools/: bundle.rs  check.rs  compile.rs  doc.rs  fmt.rs  info.rs  installer.rs  lint.rs  task.rs  upgrade.rs
micro_engine/src/tools/bench/: mitata.rs  mod.rs  reporters.rs
micro_engine/src/tools/coverage/: merge.rs  mod.rs  range_tree.rs
micro_engine/src/tools/init/: mod.rs
micro_engine/src/tools/jupyter/: install.rs  jupyter_msg.rs  mod.rs  server.rs
micro_engine/src/tools/registry/: mod.rs  tar.rs
micro_engine/src/tools/repl/: channel.rs  editor.rs  mod.rs  session.rs
micro_engine/src/tools/run/: hmr.rs  mod.rs
micro_engine/src/tools/test/: fmt.rs  mod.rs
micro_engine/src/tools/test/reporters/: common.rs  compound.rs  dot.rs  junit.rs  mod.rs  pretty.rs  tap.rs
micro_engine/src/tsc/: diagnostics.rs  mod.rs
micro_engine/src/util/: checksum.rs  diff.rs  display.rs  draw_thread.rs  file_watcher.rs  fs.rs  glob.rs  import_map.rs  logger.rs  path.rs  sync.rs  text_encoding.rs  time.rs  unix.rs  v8.rs
micro_engine/src/util/progress_bar/: mod.rs  renderer.rs
plugins/tauri-plugin-deno/: Cargo.toml  build.rs  package-lock.json  package.json
plugins/tauri-plugin-deno/dist-js/: index.cjs  index.d.ts  index.js
plugins/tauri-plugin-deno/guest-js/: index.ts
plugins/tauri-plugin-deno/permissions/autogenerated/: reference.md
plugins/tauri-plugin-deno/permissions/autogenerated/commands/: clean_deno_channel.toml  close_deno_channel.toml  create_deno_channel.toml  listen_on.toml  send_to_deno.toml  unlisten_from.toml
plugins/tauri-plugin-deno/permissions/schemas/: schema.json
plugins/tauri-plugin-deno/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-http-server/: Cargo.toml
plugins/tauri-plugin-http-server/src/: lib.rs
resource/: base.ts  bootstrap.toml  context.ts  core.ts  db.ts  def.ts  deno.json  loader.ts  main.ts  types.ts  worker.ts
resource/demo/: deno.json
resource/demo/controller/: test.ts  testtwo.ts
resource/orm/: connector-mod.ts  deps.ts
resource/orm/lib/: database.ts
resource/orm/lib/helpers/: log.ts
src-tauri/: Cargo.toml  bootstrap.toml  local_storage.sqlite  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/demo/: deno.json  main.ts
src-tauri/deno_demo/: context.ts  def.ts  deno.json  main.ts
src-tauri/deno_demo/demo/: resource.ts
src-tauri/deno_demo/demo/controller/: testtwo.ts
src-tauri/resource/: bootstrap.toml  context.ts  core.ts  def.ts  event.ts  loader.ts
src-tauri/resource/demo/: deno.json
src-tauri/resource/demo/service/: testservice.ts
src-tauri/resource/model/: data.ts
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: config.rs  mod.rs  option.rs
src-tauri/src/initialize/: config.rs  log.rs  micro_engine.rs  mod.rs
src-tauri/src/plugins/: server.rs
tauri_admin/: index.html  package-lock.json  package.json  vite.config.ts
tauri_admin/src/: App.vue
tauri_admin/src/pages/dashboard/base/: index.vue
tauri_admin/src/pages/dashboard/base/components/: TopPanel.vue
tauri_admin/src/router/modules/: homepage.ts
