[workspace]
resolver = "2"
members = [
    "src-tauri",
    "micro_engine",
    "ext/simple_http"
]

[workspace.package]
authors = ["String 348040933@qq.com"]
edition = "2021"
license = "MIT"
repository = "https://gitee.com/stringlxd/tauri-cc"

[workspace.dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.3"
tokio-tungstenite = "0.16.1"
serde = { version = "1" }
serde_json = "1.0"
serde_bytes = "0.11"

anyhow = { version = "1" }
clap = { version = "4.0.15" }
getset = "0.1.2"
fast_log = { version = "1", features = ["lz4", "zip", "gzip"] }
rusqlite = { version = "=0.29.0", features = ["unlock_notify", "bundled"] }
futures = "0.3.21"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json"] }
async-channel = "1"
num-bigint = { version = "0.4", features = ["rand"] }
prost = "0.11"
prost-build = "0.11"
url = { version = "2.3.1", features = ["serde", "expose_internals"] }
handlebars = "4"


deno_ast = { version = "0.31.6", features = ["transpiling"] }
deno_core = { version = "0.232.0" }
deno_runtime = { version = "0.135.0" }
lazy-regex = "3"
zstd = "=0.12.4"
flate2 = { version = "1.0.26", default-features = false }
deno_lockfile = "0.17.2"
napi_sym = { version = "0.57.0" }
async-trait = "0.1.73"
base64 = "0.21.4"
bytes = "1.4.0"
cache_control = "=0.2.0"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
console_static_text = "=0.8.1"
data-encoding = "2.3.3"
data-url = "=0.3.0"
encoding_rs = "=0.8.33"
fastwebsockets = "=0.5.0"
fs3 = "0.5.0"
hex = "0.4"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["runtime", "http1"] }
libc = "0.2.126"
libz-sys = { version = "1.1", default-features = false }
log = "=0.4.20"
lsp-types = "=0.94.1"
monch = "=0.4.3"
notify = "=5.0.0"
once_cell = "1.17.1"
os_pipe = "=1.1.4"
percent-encoding = "=2.3.0"
pin-project = "1.0.11"
rand = "=0.8.5"
regex = "^1.7.0"
ring = "^0.17.0"
serde_repr = "=0.1.16"
sha2 = { version = "0.10.8", features = ["oid"] }
tar = "=0.4.40"
tempfile = "3.4.0"
thiserror = "1.0.40"
tokio-util = "0.7.4"
tower-lsp = { version = "=0.20.0", features = ["proposed"] }
uuid = { version = "1.3.0", features = ["v4"] }
indexmap = { version = "2", features = ["serde"] }
memmem = "0.1.1"
simple_http = { version = "0.1.0", path = "./ext/simple_http" }
micro_engine = { version = "0.1.0", path = "./micro_engine" }
tauri = { version = "1", features = [] }
# unix
nix = "=0.26.2"
# windows deps
fwdansi = "=1.1.0"
winres = "=0.1.12"
winapi = "=0.3.9"
windows-sys = { version = "0.48.0", features = ["Win32_Media"] }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size