[workspace]
resolver = "2"
members = [
    "src-tauri",
    "ext/deno_tauri",
    "plugins/tauri-plugin-http-server"
]

[workspace.package]
authors = ["String 348040933@qq.com"]
edition = "2021"
license = "MIT"
repository = "https://gitee.com/stringlxd/tauri-cc"

[workspace.dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.3"
tokio-tungstenite = "0.16.1"
serde = { version = "1" }
serde_json = "1.0"
serde_bytes = "0.11"
anyhow = { version = "1" }
clap = { version = "4.0.15" }
getset = "0.1.2"
fast_log = { version = "1", features = ["lz4", "zip", "gzip"] }
rusqlite = { version = "=0.29.0", features = ["unlock_notify", "bundled"] }
futures = "0.3.21"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json"] }
async-channel = "2.3.1"
num-bigint = { version = "0.4", features = ["rand"] }
prost = "0.11"
url = { version = "2.3.1", features = ["serde", "expose_internals"] }

deno_web = { version = "0.197.0" }
deno_core = { version = "0.306.0" }

async-trait = "0.1.73"
log = "=0.4.20"
rand = "=0.8.5"
ring = "^0.17.0"
thiserror = "1.0.40"
tokio-util = "0.7.4"
uuid = { version = "1.3.0", features = ["v4"] }
simple_http = { version = "0.1.0", path = "./ext/simple_http" }
tauri-plugin-http-server = { version = "0.1.0", path = "./plugins/tauri-plugin-http-server" }
deno = { version = "1.46.1", path = "D:/workspace/nodejs2024/deno/cli" }
#deno = { git = "https://github.com/Cassielxd/deno.git", branch = "tauri_deno" }
tauri = { version = "1", features = [] }
[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size