[package]
name = "tauri-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["String 348040933@qq.com"]
license = ""
repository = "https://gitee.com/stringlxd/tauri-cc"
default-run = "tauri-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = [] }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
toml = "0.8.1"
state = "0.5"
getset = "0.1"
lazy_static = "1"
async-channel = { workspace = true }
futures = "0.3.28"
log = { workspace = true }
fast_log = { workspace = true }
simple_http = { workspace = true }
micro_engine = { workspace = true }
[features]
custom-protocol = ["tauri/custom-protocol"]
