[package]
name = "tauri-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["String 348040933@qq.com"]
license = ""
repository = "https://gitee.com/stringlxd/tauri-cc"
default-run = "tauri-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = ["wry"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
toml = "0.8.1"
state = "0.5"
getset = "0.1"
log = { workspace = true }
anyhow = { workspace = true }
fast_log = { workspace = true }
tauri-plugin-deno = { workspace = true }
[features]
custom-protocol = ["tauri/custom-protocol"]
