[package]
name = "simple_http"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "brotli", "gzip"] }
async-trait.workspace = true
base64.workspace = true
brotli = "3.3.4"
bytes.workspace = true
cache_control.workspace = true
deno_core.workspace = true
flate2.workspace = true
fly-accept-encoding = "0.2.0"
http.workspace = true
hyper = { workspace = true, features = ["server", "stream", "http1", "http2", "runtime"] }
hyper1 = { package = "hyper", features = ["full"], version = "=1.0.0-rc.4" }
memmem.workspace = true
mime = "0.3.16"
once_cell.workspace = true
percent-encoding.workspace = true
phf = { version = "0.11", features = ["macros"] }
pin-project.workspace = true
ring.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
lazy_static = "1.4.0"
time = "0.3.30"
async-channel = {workspace = true}