[package]
name = "tauri-plugin-deno"
version = "0.1.0"
authors = ["cassie 348040933@qq.com"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples"]
links = "tauri-plugin-deno"

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
lazy_static = "1"
async-channel = { workspace = true }
futures = "0.3.28"
state = "0.5"
deno_pro ={version = "2.0.0-rc.2", git = "https://gitee.com/stringlxd/deno_pro.git",branch = "deno_pro"}
#deno_pro = { version = "2.0.0-rc.2", path = "D:\\workspace\\rust2024\\deno\\cli", features = ["hmr"] }
uuid = { workspace = true }
[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.12", features = ["build"] }